--- a/formWecode/form.scss
+++ b/formWecode/form.scss
@@ -25,6 +25,7 @@ body{
     height: 100vh;
     display: flex;
     font-family:  Arial, Helvetica, sans-serif;
+    background-color: #48f1a3
 }
 main{
     @include displayEWidth;
